Import patches-unapplied version 1:5.7.5-1 to debian/experimental
Imported using git-ubuntu import.

Changelog parent: cd4dfae2381ac64ebe04808688f37d37293b7392

New changelog entries:
  * New upstream release

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,11 @@
 ACLOCAL_AMFLAGS = -I m4
 
+CHECK_FOR_UNRELEASED := \
+    $(srcdir)/NEWS \
+    $(wildcard $(srcdir)/src/*.[ch]) \
+    $(wildcard $(libmmclient)/src/*.[ch]) \
+    $(NULL)
+
 SUBDIRS = \
     m4 \
     tools \
