--- a/doc/reference/libmissioncontrol-server/Makefile.in
+++ b/doc/reference/libmissioncontrol-server/Makefile.in
@@ -299,6 +299,7 @@ INCLUDES = \
 	$(TELEPATHY_CFLAGS)
 
 GTKDOC_LIBS = \
+	$(top_builddir)/mission-control-plugins/libmission-control-plugins.la \
 	$(top_builddir)/src/libmissioncontrol-server.la \
 	$(top_builddir)/libmcclient/libmcclient.la \
 	$(GCONF_LIBS) \
