--- a/xml/Makefile.am
+++ b/xml/Makefile.am
@@ -14,10 +14,12 @@ SPECS = \
 	Account_Interface_ChannelRequests.xml \
 	Account_Interface_Compat.xml \
 	Account_Interface_Conditions.xml \
+	Account_Interface_External_Password_Storage.xml \
 	Account_Interface_Hidden.xml \
 	Account_Interface_Stats.xml \
 	Channel_Dispatch_Operation.xml \
 	Channel_Dispatcher.xml \
+	Channel_Dispatcher_Interface_Redispatch.xml \
 	Channel_Dispatcher_Interface_Operation_List.xml \
 	Channel_Request.xml \
 	Client.xml \
@@ -25,6 +27,7 @@ SPECS = \
 	Client_Handler.xml \
 	Client_Interface_Requests.xml \
 	Client_Observer.xml \
+	Connection_Manager_Interface_Account_Storage.xml \
         Connection_Interface_Contact_Capabilities.xml \
         Connection_Interface_Contact_Capabilities_Draft1.xml \
 	Connection_Interface_Power_Saving.xml
