--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -26,6 +26,7 @@ mc_headers = \
 	mcd-manager.h \
 	mcd-connection.h \
 	mcd-connection-plugin.h \
+	mcd-connection-service-points.h \
 	mcd-plugin.h \
 	mcd-channel.h \
 	mcd-proxy.h \
@@ -51,6 +52,7 @@ endif
 endif
 
 mc_gen_headers = \
+	_gen/cli-Connection_Manager_Interface_Account_Storage.h \
 	_gen/cli-Connection_Interface_Contact_Capabilities_Draft1.h \
 	_gen/cli-Connection_Interface_Contact_Capabilities.h \
 	_gen/cli-Connection_Interface_Power_Saving.h \
@@ -60,6 +62,7 @@ mc_gen_headers = \
 	_gen/svc-Account_Interface_ChannelRequests.h \
 	_gen/svc-Account_Interface_Compat.h \
 	_gen/svc-Account_Interface_Conditions.h \
+	_gen/svc-Account_Interface_External_Password_Storage.h \
 	_gen/svc-Account_Interface_Hidden.h \
 	_gen/svc-Account_Interface_Stats.h \
 	_gen/svc-Account_Manager_Interface_Hidden.h \
@@ -68,6 +71,7 @@ mc_gen_headers = \
 	_gen/svc-request.h
 
 nodist_libmcd_convenience_la_SOURCES = \
+	_gen/cli-Connection_Manager_Interface_Account_Storage-body.h \
 	_gen/cli-Connection_Interface_Contact_Capabilities_Draft1-body.h \
 	_gen/cli-Connection_Interface_Contact_Capabilities-body.h \
 	_gen/cli-Connection_Interface_Power_Saving-body.h \
@@ -79,6 +83,7 @@ nodist_libmcd_convenience_la_SOURCES = \
 	_gen/svc-Account_Interface_ChannelRequests.c \
 	_gen/svc-Account_Interface_Compat.c \
 	_gen/svc-Account_Interface_Conditions.c \
+	_gen/svc-Account_Interface_External_Password_Storage.c \
 	_gen/svc-Account_Interface_Hidden.c \
 	_gen/svc-Account_Interface_Stats.c \
 	_gen/svc-Account_Manager_Interface_Query.c \
@@ -189,6 +194,7 @@ libmcd_convenience_la_SOURCES = \
 	mcd-manager.c \
 	mcd-manager-priv.h \
 	mcd-connection.c \
+	mcd-connection-service-points.c \
 	mcd-connection-priv.h \
 	mcd-dispatcher.c \
 	mcd-dispatcher-priv.h \
