--- a/tests/twisted/Makefile.in
+++ b/tests/twisted/Makefile.in
@@ -386,6 +386,7 @@ TWISTED_BASIC_TESTS = account/addressing.py \
 	dispatcher/exploding-bundles.py dispatcher/fdo-21034.py \
 	dispatcher/handle-channels-fails.py dispatcher/lose-text.py \
 	dispatcher/recover-from-disconnect.py \
+	dispatcher/redispatch-channels.py \
 	dispatcher/request-disabled-account.py \
 	dispatcher/respawn-observers.py \
 	dispatcher/respawn-activatable-observers.py \
