--- a/util/Makefile.in
+++ b/util/Makefile.in
@@ -57,7 +57,8 @@ PROGRAMS = $(bin_PROGRAMS)
 am_mc_tool_OBJECTS = mc-tool.$(OBJEXT)
 mc_tool_OBJECTS = $(am_mc_tool_OBJECTS)
 am__DEPENDENCIES_1 =
-am__DEPENDENCIES_2 = $(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1)
+am__DEPENDENCIES_2 = $(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
+	$(am__DEPENDENCIES_1)
 mc_tool_DEPENDENCIES = $(am__DEPENDENCIES_2) \
 	$(top_builddir)/libmcclient/libmcclient.la
 AM_V_lt = $(am__v_lt_$(V))
@@ -67,7 +68,7 @@ am_mc_wait_for_name_OBJECTS = wait-for-name.$(OBJEXT)
 mc_wait_for_name_OBJECTS = $(am_mc_wait_for_name_OBJECTS)
 mc_wait_for_name_LDADD = $(LDADD)
 mc_wait_for_name_DEPENDENCIES = $(am__DEPENDENCIES_1) \
-	$(am__DEPENDENCIES_1)
+	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -289,6 +290,7 @@ AM_CPPFLAGS = \
 
 LDADD = \
 	$(GLIB_LIBS) \
+	$(DBUS_LIBS) \
 	$(TELEPATHY_LIBS)
 
 AM_CFLAGS = $(ERROR_CFLAGS)
