--- a/tests/twisted/Makefile.in
+++ b/tests/twisted/Makefile.in
@@ -375,6 +375,9 @@ TWISTED_BASIC_TESTS = account/addressing.py \
 	dispatcher/create-rejected-by-mini-plugin.py \
 	dispatcher/create-text.py \
 	dispatcher/created-behind-our-back.py \
+	dispatcher/delay-approvers.py \
+	dispatcher/delay-then-call-handle-with.py \
+	dispatcher/delay-then-dont-call-approvers.py \
 	dispatcher/dispatch-activatable.py \
 	dispatcher/dispatch-before-connected.py \
 	dispatcher/dispatch-delayed-by-mini-plugin.py \
@@ -390,6 +393,7 @@ TWISTED_BASIC_TESTS = account/addressing.py \
 	dispatcher/request-disabled-account.py \
 	dispatcher/respawn-observers.py \
 	dispatcher/respawn-activatable-observers.py \
+	dispatcher/some-delay-approvers.py \
 	dispatcher/undispatchable.py dispatcher/vanishing-client.py \
 	$(am__append_1)
 
