--- a/mission-control-plugins.pc.in
+++ b/mission-control-plugins.pc.in
@@ -1,10 +1,12 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
+libexecdir=@libexecdir@
 includedir=@includedir@
 MCP_API_VERSION=@MCP_API_VERSION@
 MCP_ABI_VERSION=@MCP_ABI_VERSION@
 plugindir=${libdir}/mission-control-plugins.@MCP_ABI_VERSION@
+missioncontrolpath=${libexecdir}/mission-control-5
 
 Name: mission-control-plugins
 Description: Mission Control plugin API
