--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -122,16 +122,16 @@ am__libmcd_convenience_la_SOURCES_DIST = mcd-account.c \
 	mcd-account-addressing.h mcd-account-compat.c \
 	mcd-account-conditions.c mcd-account-config.h \
 	mcd-account-connection.c mcd-account-requests.c \
-	mcd-account-stats.c mcd-account-addressing.c \
-	mcd-account-manager.c mcd-account-manager-priv.h \
-	mcd-account-manager-query.c mcd-account-manager-default.c \
-	mcd-account-priv.h mcd-client.c mcd-client-priv.h \
-	channel-utils.c channel-utils.h client-registry.c \
-	client-registry.h mcd-dbusprop.c mcd-dbusprop.h mcd-debug.c \
-	mcd-dispatch-operation.c mcd-dispatch-operation-priv.h \
-	mcd-handler-map.c mcd-handler-map-priv.h mcd-misc.c mcd-misc.h \
-	mcd-mission.c mcd-mission-priv.h mcd-operation.c \
-	mcd-controller.c mcd-master.c mcd-master-priv.h mcd-manager.c \
+	mcd-account-addressing.c mcd-account-manager.c \
+	mcd-account-manager-priv.h mcd-account-manager-query.c \
+	mcd-account-manager-default.c mcd-account-priv.h mcd-client.c \
+	mcd-client-priv.h channel-utils.c channel-utils.h \
+	client-registry.c client-registry.h mcd-dbusprop.c \
+	mcd-dbusprop.h mcd-debug.c mcd-dispatch-operation.c \
+	mcd-dispatch-operation-priv.h mcd-handler-map.c \
+	mcd-handler-map-priv.h mcd-misc.c mcd-misc.h mcd-mission.c \
+	mcd-mission-priv.h mcd-operation.c mcd-controller.c \
+	mcd-master.c mcd-master-priv.h mcd-manager.c \
 	mcd-manager-priv.h mcd-connection.c \
 	mcd-connection-service-points.c mcd-connection-priv.h \
 	mcd-dispatcher.c mcd-dispatcher-priv.h mcd-channel.c \
@@ -160,16 +160,15 @@ am__objects_2 = $(am__objects_1) $(am__objects_1)
 am_libmcd_convenience_la_OBJECTS = mcd-account.lo \
 	mcd-account-compat.lo mcd-account-conditions.lo \
 	mcd-account-connection.lo mcd-account-requests.lo \
-	mcd-account-stats.lo mcd-account-addressing.lo \
-	mcd-account-manager.lo mcd-account-manager-query.lo \
-	mcd-account-manager-default.lo mcd-client.lo channel-utils.lo \
-	client-registry.lo mcd-dbusprop.lo mcd-debug.lo \
-	mcd-dispatch-operation.lo mcd-handler-map.lo mcd-misc.lo \
-	mcd-mission.lo mcd-operation.lo mcd-controller.lo \
-	mcd-master.lo mcd-manager.lo mcd-connection.lo \
-	mcd-connection-service-points.lo mcd-dispatcher.lo \
-	mcd-channel.lo mcd-service.lo mcd-slacker.lo mcd-proxy.lo \
-	mcd-transport.lo mcd-provisioning.lo \
+	mcd-account-addressing.lo mcd-account-manager.lo \
+	mcd-account-manager-query.lo mcd-account-manager-default.lo \
+	mcd-client.lo channel-utils.lo client-registry.lo \
+	mcd-dbusprop.lo mcd-debug.lo mcd-dispatch-operation.lo \
+	mcd-handler-map.lo mcd-misc.lo mcd-mission.lo mcd-operation.lo \
+	mcd-controller.lo mcd-master.lo mcd-manager.lo \
+	mcd-connection.lo mcd-connection-service-points.lo \
+	mcd-dispatcher.lo mcd-channel.lo mcd-service.lo mcd-slacker.lo \
+	mcd-proxy.lo mcd-transport.lo mcd-provisioning.lo \
 	mcd-provisioning-factory.lo mcd-storage.lo \
 	plugin-dispatch-operation.lo plugin-loader.lo \
 	plugin-request.lo plugin-account.lo request.lo \
@@ -180,7 +179,7 @@ nodist_libmcd_convenience_la_OBJECTS = signals-marshal.lo \
 	svc-Account_Interface_Compat.lo \
 	svc-Account_Interface_Conditions.lo \
 	svc-Account_Interface_External_Password_Storage.lo \
-	svc-Account_Interface_Hidden.lo svc-Account_Interface_Stats.lo \
+	svc-Account_Interface_Hidden.lo \
 	svc-Account_Manager_Interface_Query.lo \
 	svc-Account_Manager_Interface_Hidden.lo svc-dispatcher.lo \
 	svc-request.lo mcd-enum-types.lo mcd-signals-marshal.lo \
@@ -438,7 +437,6 @@ mc_gen_headers = \
 	_gen/svc-Account_Interface_Conditions.h \
 	_gen/svc-Account_Interface_External_Password_Storage.h \
 	_gen/svc-Account_Interface_Hidden.h \
-	_gen/svc-Account_Interface_Stats.h \
 	_gen/svc-Account_Manager_Interface_Hidden.h \
 	_gen/svc-Account_Manager_Interface_Query.h \
 	_gen/svc-dispatcher.h \
@@ -459,7 +457,6 @@ nodist_libmcd_convenience_la_SOURCES = \
 	_gen/svc-Account_Interface_Conditions.c \
 	_gen/svc-Account_Interface_External_Password_Storage.c \
 	_gen/svc-Account_Interface_Hidden.c \
-	_gen/svc-Account_Interface_Stats.c \
 	_gen/svc-Account_Manager_Interface_Query.c \
 	_gen/svc-Account_Manager_Interface_Hidden.c \
 	_gen/svc-dispatcher.c \
@@ -501,17 +498,16 @@ noinst_LTLIBRARIES = libmcd-convenience.la $(am__append_10)
 libmcd_convenience_la_SOURCES = mcd-account.c mcd-account-addressing.h \
 	mcd-account-compat.c mcd-account-conditions.c \
 	mcd-account-config.h mcd-account-connection.c \
-	mcd-account-requests.c mcd-account-stats.c \
-	mcd-account-addressing.c mcd-account-manager.c \
-	mcd-account-manager-priv.h mcd-account-manager-query.c \
-	mcd-account-manager-default.c mcd-account-priv.h mcd-client.c \
-	mcd-client-priv.h channel-utils.c channel-utils.h \
-	client-registry.c client-registry.h mcd-dbusprop.c \
-	mcd-dbusprop.h mcd-debug.c mcd-dispatch-operation.c \
-	mcd-dispatch-operation-priv.h mcd-handler-map.c \
-	mcd-handler-map-priv.h mcd-misc.c mcd-misc.h mcd-mission.c \
-	mcd-mission-priv.h mcd-operation.c mcd-controller.c \
-	mcd-master.c mcd-master-priv.h mcd-manager.c \
+	mcd-account-requests.c mcd-account-addressing.c \
+	mcd-account-manager.c mcd-account-manager-priv.h \
+	mcd-account-manager-query.c mcd-account-manager-default.c \
+	mcd-account-priv.h mcd-client.c mcd-client-priv.h \
+	channel-utils.c channel-utils.h client-registry.c \
+	client-registry.h mcd-dbusprop.c mcd-dbusprop.h mcd-debug.c \
+	mcd-dispatch-operation.c mcd-dispatch-operation-priv.h \
+	mcd-handler-map.c mcd-handler-map-priv.h mcd-misc.c mcd-misc.h \
+	mcd-mission.c mcd-mission-priv.h mcd-operation.c \
+	mcd-controller.c mcd-master.c mcd-master-priv.h mcd-manager.c \
 	mcd-manager-priv.h mcd-connection.c \
 	mcd-connection-service-points.c mcd-connection-priv.h \
 	mcd-dispatcher.c mcd-dispatcher-priv.h mcd-channel.c \
@@ -632,7 +628,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mcd-account-manager-sso.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mcd-account-manager.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mcd-account-requests.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mcd-account-stats.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mcd-account.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mcd-channel.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mcd-client.Plo@am__quote@
@@ -671,7 +666,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/svc-Account_Interface_Conditions.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/svc-Account_Interface_External_Password_Storage.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/svc-Account_Interface_Hidden.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/svc-Account_Interface_Stats.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/svc-Account_Manager_Interface_Hidden.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/svc-Account_Manager_Interface_Query.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/svc-dispatcher.Plo@am__quote@
@@ -756,14 +750,6 @@ svc-Account_Interface_Hidden.lo: _gen/svc-Account_Interface_Hidden.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='_gen/svc-Account_Interface_Hidden.c' object='svc-Account_Interface_Hidden.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o svc-Account_Interface_Hidden.lo `test -f '_gen/svc-Account_Interface_Hidden.c' || echo '$(srcdir)/'`_gen/svc-Account_Interface_Hidden.c
-
-svc-Account_Interface_Stats.lo: _gen/svc-Account_Interface_Stats.c
-@am__fastdepCC_TRUE@	$(AM_V_CC)$(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -MT svc-Account_Interface_Stats.lo -MD -MP -MF $(DEPDIR)/svc-Account_Interface_Stats.Tpo -c -o svc-Account_Interface_Stats.lo `test -f '_gen/svc-Account_Interface_Stats.c' || echo '$(srcdir)/'`_gen/svc-Account_Interface_Stats.c
-@am__fastdepCC_TRUE@	$(AM_V_at)$(am__mv) $(DEPDIR)/svc-Account_Interface_Stats.Tpo $(DEPDIR)/svc-Account_Interface_Stats.Plo
-@am__fastdepCC_FALSE@	$(AM_V_CC) @AM_BACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='_gen/svc-Account_Interface_Stats.c' object='svc-Account_Interface_Stats.lo' libtool=yes @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -c -o svc-Account_Interface_Stats.lo `test -f '_gen/svc-Account_Interface_Stats.c' || echo '$(srcdir)/'`_gen/svc-Account_Interface_Stats.c
 
 svc-Account_Manager_Interface_Query.lo: _gen/svc-Account_Manager_Interface_Query.c
 @am__fastdepCC_TRUE@	$(AM_V_CC)$(LIBTOOL) $(AM_V_lt) --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS) -MT svc-Account_Manager_Interface_Query.lo -MD -MP -MF $(DEPDIR)/svc-Account_Manager_Interface_Query.Tpo -c -o svc-Account_Manager_Interface_Query.lo `test -f '_gen/svc-Account_Manager_Interface_Query.c' || echo '$(srcdir)/'`_gen/svc-Account_Manager_Interface_Query.c
