--- a/plugins/Makefile.in
+++ b/plugins/Makefile.in
@@ -34,7 +34,7 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-@ENABLE_AEGIS_TRUE@am__append_1 = mcp-dbus-aegis-acl.la
+@ENABLE_AEGIS_TRUE@am__append_1 = libmcp-aegis.la
 subdir = plugins
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -51,42 +51,18 @@ mkinstalldirs = $(install_sh) -d
 CONFIG_HEADER = $(top_builddir)/config.h
 CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
-am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
-am__vpath_adj = case $$p in \
-    $(srcdir)/*) f=`echo "$$p" | sed "s|^$$srcdirstrip/||"`;; \
-    *) f=$$p;; \
-  esac;
-am__strip_dir = f=`echo $$p | sed -e 's|^.*/||'`;
-am__install_max = 40
-am__nobase_strip_setup = \
-  srcdirstrip=`echo "$(srcdir)" | sed 's/[].[^$$\\*|]/\\\\&/g'`
-am__nobase_strip = \
-  for p in $$list; do echo "$$p"; done | sed -e "s|$$srcdirstrip/||"
-am__nobase_list = $(am__nobase_strip_setup); \
-  for p in $$list; do echo "$$p $$p"; done | \
-  sed "s| $$srcdirstrip/| |;"' / .*\//!s/ .*/ ./; s,\( .*\)/[^/]*$$,\1,' | \
-  $(AWK) 'BEGIN { files["."] = "" } { files[$$2] = files[$$2] " " $$1; \
-    if (++n[$$2] == $(am__install_max)) \
-      { print $$2, files[$$2]; n[$$2] = 0; files[$$2] = "" } } \
-    END { for (dir in files) print dir, files[dir] }'
-am__base_list = \
-  sed '$$!N;$$!N;$$!N;$$!N;$$!N;$$!N;$$!N;s/\n/ /g' | \
-  sed '$$!N;$$!N;$$!N;$$!N;s/\n/ /g'
-am__installdirs = "$(DESTDIR)$(instdir)"
-LTLIBRARIES = $(inst_LTLIBRARIES)
-mcp_dbus_aegis_acl_la_LIBADD =
-am__mcp_dbus_aegis_acl_la_SOURCES_DIST = mcp-dbus-aegis-acl.c
-@ENABLE_AEGIS_TRUE@am_mcp_dbus_aegis_acl_la_OBJECTS =  \
-@ENABLE_AEGIS_TRUE@	mcp-dbus-aegis-acl.lo
-mcp_dbus_aegis_acl_la_OBJECTS = $(am_mcp_dbus_aegis_acl_la_OBJECTS)
+LTLIBRARIES = $(noinst_LTLIBRARIES)
+am__DEPENDENCIES_1 =
+@ENABLE_AEGIS_TRUE@libmcp_aegis_la_DEPENDENCIES = $(top_builddir)/mission-control-plugins/libmission-control-plugins.la \
+@ENABLE_AEGIS_TRUE@	$(am__DEPENDENCIES_1) $(am__DEPENDENCIES_1) \
+@ENABLE_AEGIS_TRUE@	$(am__DEPENDENCIES_1)
+am__libmcp_aegis_la_SOURCES_DIST = mcp-dbus-aegis-acl.c
+@ENABLE_AEGIS_TRUE@am_libmcp_aegis_la_OBJECTS = mcp-dbus-aegis-acl.lo
+libmcp_aegis_la_OBJECTS = $(am_libmcp_aegis_la_OBJECTS)
 AM_V_lt = $(am__v_lt_$(V))
 am__v_lt_ = $(am__v_lt_$(AM_DEFAULT_VERBOSITY))
 am__v_lt_0 = --silent
-mcp_dbus_aegis_acl_la_LINK = $(LIBTOOL) $(AM_V_lt) --tag=CC \
-	$(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=link $(CCLD) \
-	$(AM_CFLAGS) $(CFLAGS) $(mcp_dbus_aegis_acl_la_LDFLAGS) \
-	$(LDFLAGS) -o $@
-@ENABLE_AEGIS_TRUE@am_mcp_dbus_aegis_acl_la_rpath = -rpath $(instdir)
+@ENABLE_AEGIS_TRUE@am_libmcp_aegis_la_rpath =
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -113,8 +89,8 @@ am__v_CCLD_0 = @echo "  CCLD  " $@;
 AM_V_GEN = $(am__v_GEN_$(V))
 am__v_GEN_ = $(am__v_GEN_$(AM_DEFAULT_VERBOSITY))
 am__v_GEN_0 = @echo "  GEN   " $@;
-SOURCES = $(mcp_dbus_aegis_acl_la_SOURCES)
-DIST_SOURCES = $(am__mcp_dbus_aegis_acl_la_SOURCES_DIST)
+SOURCES = $(libmcp_aegis_la_SOURCES)
+DIST_SOURCES = $(am__libmcp_aegis_la_SOURCES_DIST)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -286,13 +262,10 @@ INCLUDES = \
 	-DLIBDIR="@libdir@" \
 	-DLIBVERSION="@MCP_ABI_VERSION@"
 
-EXTRA_DIST = 
-instdir = @libdir@/mission-control-plugins.@MCP_ABI_VERSION@
-plugin_LDFLAGS = -module -shared -avoid-version -rpath @abs_builddir@
-inst_LTLIBRARIES = $(am__append_1)
-@ENABLE_AEGIS_TRUE@mcp_dbus_aegis_acl_la_SOURCES = mcp-dbus-aegis-acl.c
-@ENABLE_AEGIS_TRUE@mcp_dbus_aegis_acl_la_LDFLAGS = \
-@ENABLE_AEGIS_TRUE@	$(plugin_LDFLAGS) \
+noinst_LTLIBRARIES = $(am__append_1)
+@ENABLE_AEGIS_TRUE@libmcp_aegis_la_SOURCES = mcp-dbus-aegis-acl.c
+@ENABLE_AEGIS_TRUE@libmcp_aegis_la_LIBADD = \
+@ENABLE_AEGIS_TRUE@	$(top_builddir)/mission-control-plugins/libmission-control-plugins.la \
 @ENABLE_AEGIS_TRUE@	$(TELEPATHY_LIBS) \
 @ENABLE_AEGIS_TRUE@	$(DBUS_LIBS) \
 @ENABLE_AEGIS_TRUE@	$(AEGIS_LIBS)
@@ -331,39 +304,17 @@ $(top_srcdir)/configure:  $(am__configure_deps)
 $(ACLOCAL_M4):  $(am__aclocal_m4_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 $(am__aclocal_m4_deps):
-install-instLTLIBRARIES: $(inst_LTLIBRARIES)
-	@$(NORMAL_INSTALL)
-	test -z "$(instdir)" || $(MKDIR_P) "$(DESTDIR)$(instdir)"
-	@list='$(inst_LTLIBRARIES)'; test -n "$(instdir)" || list=; \
-	list2=; for p in $$list; do \
-	  if test -f $$p; then \
-	    list2="$$list2 $$p"; \
-	  else :; fi; \
-	done; \
-	test -z "$$list2" || { \
-	  echo " $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=install $(INSTALL) $(INSTALL_STRIP_FLAG) $$list2 '$(DESTDIR)$(instdir)'"; \
-	  $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=install $(INSTALL) $(INSTALL_STRIP_FLAG) $$list2 "$(DESTDIR)$(instdir)"; \
-	}
 
-uninstall-instLTLIBRARIES:
-	@$(NORMAL_UNINSTALL)
-	@list='$(inst_LTLIBRARIES)'; test -n "$(instdir)" || list=; \
-	for p in $$list; do \
-	  $(am__strip_dir) \
-	  echo " $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=uninstall rm -f '$(DESTDIR)$(instdir)/$$f'"; \
-	  $(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=uninstall rm -f "$(DESTDIR)$(instdir)/$$f"; \
-	done
-
-clean-instLTLIBRARIES:
-	-test -z "$(inst_LTLIBRARIES)" || rm -f $(inst_LTLIBRARIES)
-	@list='$(inst_LTLIBRARIES)'; for p in $$list; do \
+clean-noinstLTLIBRARIES:
+	-test -z "$(noinst_LTLIBRARIES)" || rm -f $(noinst_LTLIBRARIES)
+	@list='$(noinst_LTLIBRARIES)'; for p in $$list; do \
 	  dir="`echo $$p | sed -e 's|/[^/]*$$||'`"; \
 	  test "$$dir" != "$$p" || dir=.; \
 	  echo "rm -f \"$${dir}/so_locations\""; \
 	  rm -f "$${dir}/so_locations"; \
 	done
-mcp-dbus-aegis-acl.la: $(mcp_dbus_aegis_acl_la_OBJECTS) $(mcp_dbus_aegis_acl_la_DEPENDENCIES) 
-	$(AM_V_CCLD)$(mcp_dbus_aegis_acl_la_LINK) $(am_mcp_dbus_aegis_acl_la_rpath) $(mcp_dbus_aegis_acl_la_OBJECTS) $(mcp_dbus_aegis_acl_la_LIBADD) $(LIBS)
+libmcp-aegis.la: $(libmcp_aegis_la_OBJECTS) $(libmcp_aegis_la_DEPENDENCIES) 
+	$(AM_V_CCLD)$(LINK) $(am_libmcp_aegis_la_rpath) $(libmcp_aegis_la_OBJECTS) $(libmcp_aegis_la_LIBADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -489,9 +440,6 @@ check-am: all-am
 check: check-am
 all-am: Makefile $(LTLIBRARIES)
 installdirs:
-	for dir in "$(DESTDIR)$(instdir)"; do \
-	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
-	done
 install: install-am
 install-exec: install-exec-am
 install-data: install-data-am
@@ -519,7 +467,7 @@ maintainer-clean-generic:
 	@echo "it deletes files that may require special tools to rebuild."
 clean: clean-am
 
-clean-am: clean-generic clean-instLTLIBRARIES clean-libtool \
+clean-am: clean-generic clean-libtool clean-noinstLTLIBRARIES \
 	mostlyclean-am
 
 distclean: distclean-am
@@ -540,7 +488,7 @@ info: info-am
 
 info-am:
 
-install-data-am: install-instLTLIBRARIES
+install-data-am:
 
 install-dvi: install-dvi-am
 
@@ -586,23 +534,22 @@ ps: ps-am
 
 ps-am:
 
-uninstall-am: uninstall-instLTLIBRARIES
+uninstall-am:
 
 .MAKE: install-am install-strip
 
 .PHONY: CTAGS GTAGS all all-am check check-am clean clean-generic \
-	clean-instLTLIBRARIES clean-libtool ctags distclean \
+	clean-libtool clean-noinstLTLIBRARIES ctags distclean \
 	distclean-compile distclean-generic distclean-libtool \
 	distclean-tags distdir dvi dvi-am html html-am info info-am \
 	install install-am install-data install-data-am install-dvi \
 	install-dvi-am install-exec install-exec-am install-html \
-	install-html-am install-info install-info-am \
-	install-instLTLIBRARIES install-man install-pdf install-pdf-am \
-	install-ps install-ps-am install-strip installcheck \
-	installcheck-am installdirs maintainer-clean \
-	maintainer-clean-generic mostlyclean mostlyclean-compile \
-	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
-	tags uninstall uninstall-am uninstall-instLTLIBRARIES
+	install-html-am install-info install-info-am install-man \
+	install-pdf install-pdf-am install-ps install-ps-am \
+	install-strip installcheck installcheck-am installdirs \
+	maintainer-clean maintainer-clean-generic mostlyclean \
+	mostlyclean-compile mostlyclean-generic mostlyclean-libtool \
+	pdf pdf-am ps ps-am tags uninstall uninstall-am
 
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
