--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -117,6 +117,10 @@ libmcd_convenience_la_LIBADD += $(LIBACCOUNTS_SSO_LIBS)
 INCLUDES += $(LIBACCOUNTS_SSO_CFLAGS)
 endif
 
+if ENABLE_AEGIS
+libmcd_convenience_la_LIBADD += $(top_builddir)/plugins/libmcp-aegis.la
+endif
+
 noinst_LTLIBRARIES = libmcd-convenience.la
 
 if ENABLE_MCD_PLUGINS
