Import patches-unapplied version 1:5.9.3-2 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 7f667d191ec3ce7c9a5e1f6b7ecec5c76fee742c

New changelog entries:
  * debian/control:
    - Add myself to Uploaders list
    - Build-depends on libnm-glib-dev only on linux-any arch
  * debian/rules: Only build with NM support on linux architectures

--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,8 @@ Priority: optional
 Maintainer: Debian Telepathy maintainers <pkg-telepathy-maintainers@lists.alioth.debian.org>
 Uploaders: Simon McVittie <smcv@debian.org>,
            Jonny Lamb <jonny@debian.org>,
-           Sjoerd Simons <sjoerd@debian.org>
+           Sjoerd Simons <sjoerd@debian.org>,
+           Laurent Bigonville <bigon@debian.org>
 Build-Depends: autotools-dev (>= 20100122-1~),
                debhelper (>= 8),
                gtk-doc-tools,
@@ -14,7 +15,7 @@ Build-Depends: autotools-dev (>= 20100122-1~),
                libgnome-keyring-dev,
                libtelepathy-glib-dev (>= 0.15),
                libupower-glib-dev,
-               libnm-glib-dev,
+               libnm-glib-dev [linux-any],
                pkg-config (>= 0.21),
                python (>= 2.5),
                xsltproc
