--- a/debian/rules
+++ b/debian/rules
@@ -1,5 +1,18 @@
 #!/usr/bin/make -f
 
+CONFIGURE_FLAGS = --libexecdir=\$${prefix}/lib/telepathy \
+                  --disable-Werror \
+                  --disable-mcd-plugins \
+                  --enable-gtk-doc \
+                  --enable-server \
+                  --enable-gnome-keyring \
+                  --with-html-dir=\$${prefix}/share/doc/libmission-control-plugins-doc \
+                  --enable-upower
+
+ifeq ($(DEB_BUILD_ARCH_OS),linux)
+CONFIGURE_FLAGS += --with-connectivity=nm
+endif
+
 %:
 	dh $@ --with autotools_dev
 
@@ -24,16 +37,7 @@ override_dh_auto_test:
 # their associated documentation, making their libraries static, and disabling
 # their headers
 override_dh_auto_configure:
-	dh_auto_configure -- \
-	--libexecdir=\$${prefix}/lib/telepathy \
-	--disable-Werror \
-	--disable-mcd-plugins \
-	--enable-gtk-doc \
-	--enable-server \
-	--enable-gnome-keyring \
-	--with-html-dir=\$${prefix}/share/doc/libmission-control-plugins-doc \
-	--with-connectivity=nm \
-	--enable-upower
+	dh_auto_configure -- ${CONFIGURE_FLAGS}
 
 # we symlink some of the doc directories together
 override_dh_installdocs:
